--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>GithubProfiler</title>
-  <base href="/github-profiler/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://ankits.me/github-profiler/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.5907aa653f2cf0e6f09a.css"></head>
 <body>
